about page fixed, container not needed in nav; plant info page acting funny, modal not showing up

--- a/css/about.css
+++ b/css/about.css
@@ -54,7 +54,7 @@ font-family: 'Handlee', cursive;
   color: #000;
 }
 #header-nav a:last-child {
-  padding-right: 0.5rem;
+  padding-right: 0.5em;
 }
 #header-nav a:hover {
   text-decoration: none;
